# QtBox

./: CMakeLists.txt  README.md
360safe/: 360safe.rc  CMakeLists.txt  about_us.cpp  about_us.h  account_item.cpp  account_item.h  change_skin_widget.cpp  change_skin_widget.h  character_widget.cpp  character_widget.h  clabel.cpp  clabel.h  common.h  content_widget.cpp  content_widget.h  drop_shadow_widget.cpp  drop_shadow_widget.h  kill_mummy_widget.cpp  kill_mummy_widget.h  loading_widget.cpp  loading_widget.h  login_dialog.cpp  login_dialog.h  main.cpp  main_menu.cpp  main_menu.h  main_widget.cpp  main_widget.h  msg_box.cpp  msg_box.h  push_button.cpp  push_button.h  readMe.txt  register_widget.cpp  register_widget.h  resource.h  setting_dialog.cpp  setting_dialog.h  shadow_widget.cpp  shadow_widget.h  (+10 more)
360safe/Resources/: 360safe.qrc  360safe.qss  360safe_en.qm  360safe_en.ts  360safe_zh.qm  360safe_zh.ts
